ingredient -> ingredientEmbeddable